Adding Forgot Password and reset password routes and code changes
